fix footer nav  wrong margin-bottom

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -10,6 +10,7 @@
 .b-footer-top__nav {
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 24px;
     
 }
 
